--- a/index.html
+++ b/index.html
@@ -567,6 +567,7 @@
             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">Desenvolvedor Backend + Suporte TibiaKing.com</h4>
+              <h3 class="h4 timeline-item-title">Tibiaking</h3>
 
               <span>2019 — 2020</span>
 
@@ -574,8 +575,8 @@
 
             Suporte Técnico e Dúvidas:Suporte Técnico e Dúvidas:
             Responder às perguntas e dúvidas dos usuários sobre tecnologia em geral, produtos ou serviços da empresa.
-            Oferecer suporte remoto ou por e-mail para usuários com dificuldades técnicas.
-            Comunicar atualizações importantes e soluções para problemas recorrentes.Responder às perguntas e dúvidas dos usuários sobre tecnologia em geral, produtos ou serviços da empresa. Oferecer suporte remoto ou por e-mail para usuários com dificuldades técnicas. Comunicar atualizações importantes e soluções para problemas recorrentes. 
+            Oferecer suporte remoto ou por e-mail para usuários com dificuldades técnicas.<br>
+            Comunicar atualizações importantes e soluções para problemas recorrentes.Responder às perguntas e dúvidas dos usuários sobre tecnologia em geral, produtos ou serviços da empresa. Oferecer suporte remoto ou por e-mail para usuários com dificuldades técnicas. 
             Competências: Gestão · Metodologias AgileCompetências: Gestão · Metodologias Agile
             Desenvolvimento BackendDesenvolvimento Backend
             Utilizar PHP para desenvolver a lógica de negócio e serviços do servidor.
