--- a/index.html
+++ b/index.html
@@ -566,8 +566,8 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Desenvolvedor Backend + Suporte TibiaKing.com</h4>
-              <h3 class="h4 timeline-item-title">Tibiaking</h3>
+              <h4 class="h4 timeline-item-title">Desenvolvedor Backend + Suporte</h4>
+              <h3 class="h4 timeline-item-title"><a href="https://tibiaking.com">Tibiaking</a></h3>
 
               <span>2019 — 2020</span>
 
@@ -576,14 +576,15 @@
             Suporte Técnico e Dúvidas:Suporte Técnico e Dúvidas:
             Responder às perguntas e dúvidas dos usuários sobre tecnologia em geral, produtos ou serviços da empresa.
             Oferecer suporte remoto ou por e-mail para usuários com dificuldades técnicas.<br>
-            Comunicar atualizações importantes e soluções para problemas recorrentes.Responder às perguntas e dúvidas dos usuários sobre tecnologia em geral, produtos ou serviços da empresa. Oferecer suporte remoto ou por e-mail para usuários com dificuldades técnicas. 
-           
+            Comunicar atualizações importantes e soluções para problemas recorrentes.Responder às perguntas e dúvidas dos usuários sobre tecnologia em geral, produtos ou serviços da empresa.
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Desenvolvedor Front-end TibiaKing.com</h4>
+              <h4 class="h4 timeline-item-title">Desenvolvedor Front-end</h4>
+              <h3 class="h4 timeline-item-title"><a href="https://tibiaking.com">Tibiaking</a></h3>
+
 
               <span>2019 — 2020</span>
 
@@ -591,7 +592,8 @@
             Desenvolvimento FrontendDesenvolvimento Frontend
             Utilizar JavaScript e TypeScript para desenvolver a interface do site e aplicativos.
             Implementar layouts responsivos e interativos para melhor experiência do usuário.
-            Colaborar com a equipe de design para transformar protótipos em código funcional.Utilizar JavaScript e TypeScript para desenvolver a interface do site e aplicativos. Implementar layouts responsivos e interativos para melhor experiência do usuário. Colaborar com a equipe de design para transformar protótipos em código funcional. 
+            Colaborar com a equipe de design para transformar protótipos em código funcional.Utilizar JavaScript e TypeScript para desenvolver a interface do site e aplicativos. 
+ 
             Competências: Design de interface do usuário · TypeScript · JavaScriptCompetências: Design de interface do usuário · TypeScript · JavaScript
 
               </p>
