--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
 
               <p class="timeline-text">
 
-            Suporte Técnico e Dúvidas:Suporte Técnico e Dúvidas:
+            Suporte Técnico e Dúvidas
             Responder às perguntas e dúvidas dos usuários sobre tecnologia em geral, produtos ou serviços da empresa.
             Oferecer suporte remoto ou por e-mail para usuários com dificuldades técnicas.<br>
             Comunicar atualizações importantes e soluções para problemas recorrentes.Responder às perguntas e dúvidas dos usuários sobre tecnologia em geral, produtos ou serviços da empresa.
@@ -589,7 +589,7 @@
               <span>2019 — 2020</span>
 
               <p class="timeline-text">
-            Desenvolvimento FrontendDesenvolvimento Frontend
+            Desenvolvimento Frontend
             Utilizar JavaScript e TypeScript para desenvolver a interface do site e aplicativos.
             Implementar layouts responsivos e interativos para melhor experiência do usuário.
             Colaborar com a equipe de design para transformar protótipos em código funcional.Utilizar JavaScript e TypeScript para desenvolver a interface do site e aplicativos. 
